--- a/apps/sim/.env.example
+++ b/apps/sim/.env.example
@@ -28,6 +28,9 @@ API_ENCRYPTION_KEY=your_api_encryption_key # Use `openssl rand -hex 32` to gener
 # VLLM_BASE_URL=http://localhost:8000    # Base URL for your self-hosted vLLM (OpenAI-compatible)
 # VLLM_API_KEY=                          # Optional bearer token if your vLLM instance requires auth
 
+# Custom Copilot Server (Optional)
+# SIM_AGENT_API_URL=http://localhost:3004  # URL for custom copilot server (self-hosted alternative to copilot.sim.ai)
+
 # Admin API (Optional - for self-hosted GitOps)
 # ADMIN_API_KEY=  # Use `openssl rand -hex 32` to generate. Enables admin API for workflow export/import.
                   # Usage: curl -H "x-admin-key: your_key" https://your-instance/api/v1/admin/workspaces
